Make comment lables in timeline readable - Fix #29

--- a/material-github.user.css
+++ b/material-github.user.css
@@ -352,7 +352,7 @@ path.js-diff-placeholder {
     color: inherit;
 }
 /* comments */
- .comment-body, .markdown-body, .js-comment-body {
+ .comment-body, .markdown-body, .js-comment-body, .review-comment {
     color: rgba(255, 255, 255, 0.7) !important;
 }
 /* timeline background lines, badges, etc */
